growing backend with scalability techniques